@@ -75,6 +75,7 @@ v0.5.0, 2016-03-?? -- the future is in the past
      * dropped support for Hadoop prior to 0.20.203 (#1208)
      * added hadoop_log_dirs option
      * hdfs_scratch_dir option is now hadoop_tmp_dir (#318)
+     * hadoop_home is deprecated
      * uses -D and correct property name when step has no reduces (#1213)
    * Inline/Local
      * runner.fs raises IOError if passed URIs (#1185)
